[tool.poetry]
name = "mystic-api"
version = "0.1.0"
description = "Mystic API with Numerology and Astrology"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^22.0.0"
skyfield = "^1.46"
pyswisseph = "^2.10.1"
timezonefinder = "^6.4.1"
geopy = "^2.4.1"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
